fix: page overflow (better mobile game experience)

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -28,6 +28,14 @@
     );
 }
 
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+    touch-action: none;
+    overscroll-behavior: none;
+}
+
 @keyframes jumpTwice {
     0%,
     100% {
